@@ -2,7 +2,7 @@
 /* set latest version */
 define("VERSION", "1.21");									//version changes if database structure changes
 /* set latest revision */
-define("REVISION", "032");									//revision always changes, verision only if database structure changes
+define("REVISION", "033");									//revision always changes, verision only if database structure changes
 /* set last possible upgrade */
 define("LAST_POSSIBLE", "1.1");								//minimum required version to be able to upgrade
 ?>
